// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxBadge customize 1`] = `
<div>
  <div
    class="badge warning small circle bazinga"
  >
    Test
  </div>
</div>
`;

exports[`CxBadge position 1`] = `
<div>
  <span
    class="badge danger position-absolute translate-middle top-0 start-100"
  >
    Test
  </span>
</div>
`;

exports[`CxBadge variant 1`] = `
<div>
  <span
    class="badge primary outline"
  >
    Test
  </span>
</div>
`;

exports[`loads and displays CxBadge component 1`] = `
<div>
  <span
    class="badge primary"
  >
    Test
  </span>
</div>
`;
